# autojsonrpc

./: .gitignore  README.md  pyproject.toml
autojsonrpc/: __init__.py  __main__.py  asgi.py  flask.py  types.py  wsgi.py
autojsonrpc/clients/: javascript.py  php.py  python.py  typescript.py
tests/: test_asgi.py  test_flask.py  test_wsgi.py
