[tool.poetry]
name = "autojsonrpc"
version = "0.1.0"
description = "generates jsonrpc interface for python services"
authors = ["Julien RIALLAND <julien.rialland@groupe-asten.fr>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "^3.0.3"
jsmin = "^3.0.1"
flask-sqlalchemy = "^3.1.1"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
mypy = "^1.9.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
